# FrameMonitor

./: .gitignore  00082.MTS.md  00082.MTS.res.md  00082.MTS.sig.md  00086.MTS.md  00086.MTS.res.md  00086.MTS.sig.md  CMakeLists.txt  CMakePresets.json  Config.props  DeviceEnumerator.cpp  DeviceEnumerator.h  FrameMonitor.cpp  FrameMonitor.h  FrameMonitor.rc  FrameMonitor.sln  FrameMonitor.vcxproj  FrameMonitor.vcxproj.filters  FrameMonitorDlg.cpp  FrameMonitorDlg.h  FrameRepeat.cpp  FrameRepeat.h  FrameRepeat.rc  FrameRepeat.sln  FrameRepeat.vcxproj  FrameRepeat.vcxproj.filters  FrameRepeatDlg.cpp  FrameRepeatDlg.h  LICENSE  README.md  ReadMe.txt  TimelineStatic.cpp  TimelineStatic.h  Video.cpp  Video.h  VideoConsole.vcxproj  cap0.res.md  cap0.sig.md  cmake_winrt.cmd  cmakevio_winrt.cmd  (+8 more)
enc_temp_folder/5c8e14232c64bcbd47c42bafa4c123f5/: Video.cpp
res/: FrameMonitor.rc2
results/: 00082.MTS.md  00086.MTS.md
